# matcode

./: .gitignore  CMakeLists.txt  README.md
inc/: matcode.h
src/test/: matcode_test.c
